completed functionality of the application

--- a/test.html
+++ b/test.html
@@ -26,26 +26,37 @@
             </form>
           </div>
           <div class="List-container" id="listCon">
-            <input
-              type="checkbox"
-              class="tick"
-              id="task1"
-              name="task1"
-              value="new task"
-            />
-            <label class="taskContent" id="task1" for="task1"
-              >Complete javascript projects</label
-            ><br />
-            <input
-              type="checkbox"
-              class="tick"
-              id="task2"
-              name="task2"
-              value="new task"
-            />
-            <label class="taskContent" for="task2"
-              >Complete javascript projects</label
-            ><br />
+            <div class="task-item">
+              <div class="task-item-left">
+                <input
+                  type="checkbox"
+                  class="tick"
+                  id="task1"
+                  name="task1"
+                  value="new task"
+                />
+                <label class="taskContent" id="task1" for="task1"
+                  >Complete javascript projects</label
+                ><br />
+              </div>
+              <span id="">*</span>
+            </div>
+
+            <div class="task-item">
+              <div class="task-item-left">
+                <input
+                  type="checkbox"
+                  class="tick"
+                  id="task8"
+                  name="task8"
+                  value="new task"
+                />
+                <label class="taskContent" id="task8" for="task8"
+                  >Complete javascript projects</label
+                ><br />
+              </div>
+              <span id="">*</span>
+            </div>
           </div>
         </div>
       </div>
