--- a/test.html
+++ b/test.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>To-Do</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Nova+Square"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Mulish"
+    />
   </head>
   <link rel="stylesheet" href="test.css" />
   <body>
@@ -26,7 +34,7 @@
             </form>
           </div>
           <div class="List-container" id="listCon">
-            <div class="task-item">
+            <!-- <div class="task-item">
               <div class="task-item-left">
                 <input
                   type="checkbox"
@@ -40,9 +48,9 @@
                 ><br />
               </div>
               <span id="">*</span>
-            </div>
+            </div> -->
 
-            <div class="task-item">
+            <!-- <div class="task-item">
               <div class="task-item-left">
                 <input
                   type="checkbox"
@@ -56,7 +64,7 @@
                 ><br />
               </div>
               <span id="">*</span>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
